[package]
name = "anvil_db"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "an embedded key-value store"
repository = "https://github.com/georgesaussy/anvil_db"
readme = "README.md"
keywords = ["database"]
categories = ["database", "concurrency"]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true
